--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,15 +1,29 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>TaskApp</title>
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
+    <head>
+      <title>TaskApp</title>
+        <%= csrf_meta_tags %>
+        <%= csp_meta_tag %>
+    
+        <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+        <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    </head>
 
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
-
-  <body>
-    <%= yield %>
-  </body>
+    <body>
+      <header>
+        <h1>Ruby on Rails スケジュール管理アプリ</h1>
+      </header>
+        <div class="main_container">
+          <div class="information"></div>
+            <%= yield %>
+        </div>
+          <footer>
+            <% case controller.action_name %>
+              <% when "index" %>
+                <%= render "shared/root_footer" %>
+              <% else %>
+                <%= render "shared/footer" %>
+            <% end %>
+          </footer>
+    </body>
 </html>
