--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,8 +1,6 @@
 <h3>スケジュール詳細</h3>
 
-<% if flash[:failure] %>
-  <p class="failure"><%= flash[:failure] %></p>
-<% end %>
+<%= render "shared/failure" %>
 
 <table>
   <tr>
